<resources>
    <string name="app_name" translatable="false">Mera Mishtu</string>
    <string name="bn_service_entertainment" comment="Title text shown on discover services">Entertainment</string>
    <string name="bn_service_jobs" comment="Title text shown on discover services">Skilling</string>
    <string name="bn_service_offers" comment="Title text shown on discover services">Deals Near You</string>
    <string name="bn_service_entertainment_desc" comment="Description text shown for entertainment service">Enjoy a world of movies, series and short clips</string>
    <string name="bn_service_jobs_desc" comment="Description text shown for jobs service">Find local jobs around you</string>
    <string name="bn_service_offers_desc" comment="Description text shown for offers">Check nearby offers &amp; discounts</string>
    <string name="bn_service_government" comment="Title text shown on discover services">Government\nServices</string>
    <string name="tab_downloads" comment="Title text shown on bottom bar">Downloads</string>
    <string name="discover_page_title" comment="Requesting user to select a service">Pick a Service</string>
    <string name="bn_search_by_name_actor_year" comment="Hint text for search criteria">Search by name, actor, year…</string>
    <string name="bn_all" comment="tab title for all content">All</string>
    <string name="bn_clips" comment="tab title for clips content">Short Videos</string>
    <string name="bn_movies" comment="tab title for movies content">Films</string>
    <string name="bn_series" comment="tab title for series content">Series</string>
    <string name="bn_fresh_arrivals" comment="section title for new arrived content">Fresh Arrivals</string>
    <string name="bn_more_short_clips" comment="section title for short form content">Popular short videos</string>
    <string name="bn_mishtu_short_clips" comment="section title for mishtu short form content">Latest Movies on Mera Mishtu</string>
    <string name="bn_languages" comment="section title for language filter">Languages</string>
    <string name="bn_Genres" comment="section title for genre filter">Genres</string>
    <string name="bn_search" comment="search button title">Search</string>
    <string name="bn_search_by_title_actor_genres" comment="Hint text for search criteria">Search by title, actor, genres…</string>
    <string name="bn_search_by_actor_movie" comment="Hint text for search criteria in subscription screen">Search by actor, genres, movie name</string>
    <string name="bn_hindi_english_kannada_and_more" comment="Description text for language search">Hindi, English, Kannada and more</string>
    <string name="bn_trending_searches" comment="Section title for trending searches">Trending searches</string>
    <string name="ln_language" comment="Screen title for language">Language</string>
    <string name="bn_movie_details" comment="Screen title for movie details">Movie Details</string>
    <string name="bn_trending_content" comment="Section title for trending all content">Trending Content</string>
    <string name="bn_trending_movies" comment="Section title for trending movies">Trending Movies</string>
    <string name="bn_trending_series" comment="Section title for trending series">Trending Series</string>
    <string name="bn_recommended_movies" comment="Section title for recommended movies">Recommended Movies</string>
    <string name="bn_recommended_series" comment="Section title for trending series">Recommended Series</string>
    <string name="bn_free_movies" comment="Section title for free movies">Free Movies</string>
    <string name="bn_paid_movies" comment="Section title for paid movies">Paid Films</string>
    <string name="bn_paid_series" comment="Section title for paid movies">Paid Series</string>
    <string name="bn_gn_drama" comment="Genre filter title">Drama</string>
    <string name="bn_gn_family" comment="Genre filter title">Family</string>
    <string name="bn_gn_reality" comment="Genre filter title">Reality</string>
    <string name="bn_gn_crime" comment="Genre filter title">Crime</string>
    <string name="bn_gn_romance" comment="Genre filter title">Romance</string>
    <string name="bn_gn_mythology" comment="Genre filter title">Mythology</string>
    <string name="bn_gn_action" comment="Genre filter title">Action</string>
    <string name="bn_gn_fantasy" comment="Genre filter title">Fantasy</string>
    <string name="bn_gn_thriller" comment="Genre filter title">Thriller</string>
    <string name="genre" comment="Genre filter">Genre</string>
    <string name="comedy_horror_thriller_and_more" comment="Hint text for genre filter">Comedy, Horror, Thriller and more</string>
    <string name="bn_search_genre" comment="Hint text for genre filter">Search Genre</string>
    <string name="_results" comment="Text for result count">\"%d\" results</string>
    <string name="bn_results_sub_text" comment="Text for no result count">&#160;for \"%s\". Sharing the content you might be interested in. </string>
    <string name="bn_fw_categories" comment="Section title for short form categories">Categories</string>
    <string name="bn_fw_travel" comment="Short form video category title">Travel</string>
    <string name="bn_fw_food" comment="Short form video category title">Food</string>
    <string name="bn_fw_comedy" comment="Short form video category title">Comedy</string>
    <string name="bn_fw_news" comment="Short form video category title">News</string>
    <string name="bn_fw_fitness" comment="Short form video category title">Fitness</string>
    <string name="bn_fw_fashion" comment="Short form video category title">Fashion</string>
    <string name="bn_fw_movie" comment="Short form video category title">Movies and TV</string>
    <string name="bn_fw_celebrity" comment="Short form video category title">Celebrity</string>
    <string name="bn_help_support" comment="Profile section help and support">Help &amp; Support</string>
    <string name="bn_referral_code" comment="Profile section referral code">Referral Code</string>
    <string name="bn_order_history" comment="Profile section order history">Order History</string>
    <string name="bn_support" comment="Profile section support">Support</string>
    <string name="bn_dark_mode" comment="Profile section dark mode">Dark Mode</string>
    <string name="bn_app_language" comment="Profile section language">App Language</string>
    <string name="bn_preference" comment="Profile section preference">Preference</string>
    <string name="bn_job_types" comment="Profile section job type">Job Types</string>
    <string name="bn_jobs" comment="Profile section jobs">Jobs</string>
    <string name="bn_downloads" comment="Profile section downloads">Downloads</string>
    <string name="bn_download" comment="Profile section downloads">Download</string>
    <string name="bn_subscriptions" comment="Profile section subscriptions">Subscriptions</string>
    <string name="bn_subscription" comment="title subscription">Subscription</string>
    <string name="bn_content" comment="Profile section content">Content</string>
    <string name="bn_set_app_language" comment="Instruction text to select language">Set App Language</string>
    <string name="bn_search_order_hint" comment="Hint text to filter orders">Search by pack, movie, date, order ID</string>
    <string name="bn_search_topics" comment="Hint text to filter support topics">Search Topics</string>
    <string name="bn_refresh" comment="Button title to refresh content">Refresh</string>
    <string name="bn_retry" comment="Button title to retry fetch content">Retry</string>
    <string name="bn_no_internet_connection" comment="Error message when no internet connection">No Internet Connection</string>
    <string name="bn_server_error" comment="Error message when service error received">Oops. Something went wrong.\n Please retry or come again later.</string>
    <string name="bn_something_went_wrong" comment="Error message when service error received">Oops. Something went wrong</string>
    <string name="bn_we_were_unable_to_fetch_the_content" comment="Error message when content refresh failed">We were unable to fetch the content.</string>
    <string name="bn_no_internet_subtitle" comment="Error message when no internet connection">Please check internet connection and try again.</string>
    <string name="bn_image_description" comment="Default description for image">Image here…</string>
    <string name="bn_pack_description" comment="Default description for image">All movies and series for %d Days</string>
    <string name="bn_buy_pack_title" comment="Button title to buy pack">Buy Rs %d pack</string>
    <string name="bn_pack_active" comment="Button title for active pack">Active</string>
    <string name="bn_pack_expire_disclaimer" comment="Disclaimer for one active pack">You can only buy pack after the first pack expires</string>
    <string name="bn_view_other_packs" comment="Title to browse more back">View Other Packs</string>
    <string name="bn_other_packs" comment="Title to browse more back">Other Packs</string>
    <string name="bn_previous_subscriptions" comment="Section title previous subscription">Previous Subscriptions</string>
    <string name="bn_thank_you_for_subscribing" comment="Message after buying subscription">Thank You For Subscribing!</string>
    <string name="bn_subscription_hint" comment="Hint text for searching packs">Search by pack name, date</string>
    <string name="bn_select_a_pack_and_pay" comment="Instruction text to select pack">Select a pack and pay at the nearby shop</string>
    <string name="bn_select_a_pack" comment="Instruction text to select pack">Select A Pack</string>
    <string name="bn_select_pack" comment="Instruction text to select pack">Select pack</string>
    <string name="bn_renew_pack" comment="Button title to renew pack">Renew Pack</string>
    <string name="bn_find_a_store" comment="Button title to find stores">Find A Shop</string>
    <string name="bn_buy_a_pack" comment="Button title to buy pack">Buy A Pack ></string>
    <string name="bn_buy_this_pack" comment="Button title to buy pack">Buy This Pack</string>
    <string name="bn_pack_expired" comment="Title to indicate expired pack">Expired</string>
    <string name="bn_pack_expired_title" comment="Title to indicate expired pack">Pack Expired!</string>
    <string name="bn_pack_rs" comment="Pack price text">Rs.%d/-</string>
    <string name="bn_rs" comment="Pack price text">₹ %d</string>
    <string name="bn_pack_duration" comment="Pack duration text">For %d days</string>
    <string name="bn_pack_distance" comment="Store distance text">%d m Away</string>
    <string name="bn_found_stores_near_you" comment="Stores result">%d stores near you</string>
    <string name="bn_enjoy_all_movies" comment="Description for what a pack holds">Enjoy all movies and series for %d Days.</string>
    <string name="bn_view_all_packs" comment="Button title view all packs">View All Packs</string>
    <string name="enter_the_code_shared_by_the_retailer" comment="Message to share Pin">Enter the code shared by the retailer</string>
    <string name="bn_enter_referral_code" comment="Instruction to enter referral code">Enter referral code</string>
    <string name="skip" comment="Button title skip">Skip</string>
    <string name="cancel_order_confirm" comment="Confirmation message for cancelling order">Do you want to cancel your ₹ %d/- pack?</string>
    <string name="btn_yes" comment="yes">Yes</string>
    <string name="btn_no" comment="No">No</string>
    <string name="free_download_is_available" comment="Text notifying hubs are available">Free download is available in your city. Please visit the nearest shop to download and save your 100% data</string>
    <string name="skip_for_now" comment="Button text skip">Skip For Now</string>
    <string name="bn_submit" comment="static text Submit">Submit</string>
</resources>