<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    android:translationZ="@dimen/dp_2">

    <TextView
        android:id="@+id/pack_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/SubHeadingText"/>

    <TextView
        android:id="@+id/pack_view_all_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bn_view_all_packs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="@dimen/dp_5"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        style="@style/BodyText14sp"
        app:drawableEndCompat="@drawable/bn_ic_right_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_78"
        android:background="@drawable/bn_pack_bg"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/pack_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_8"
        android:padding="@dimen/dp_16">

        <ImageView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_14"
            android:src="@drawable/bn_ic_erosnow"
            android:contentDescription="@string/bn_image_description"/>
        <TextView
            android:id="@+id/pack_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            style="@style/BodyText14sp"
            android:text="@string/bn_enjoy_all_movies"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>