<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

    <include
        android:id="@+id/dialog_close"
        layout="@layout/textview_close_bottom_sheet" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/bn_bg_bottom_sheet_language"
            app:layout_constraintTop_toBottomOf="@id/dialog_close"
            android:paddingBottom="@dimen/dp_30">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/cancel_order_confirm"
                style="@style/HeadingText"
                android:gravity="center"
                android:textSize="@dimen/sp_24"
                android:paddingStart="@dimen/dp_24"
                android:paddingEnd="@dimen/dp_24"/>

            <Button
                android:id="@+id/btnNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bn_bg_btn_round"
                android:text="@string/btn_no"
                style="@style/SubmitButtonStyle"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bn_bg_btn_buy_pack"
                android:text="@string/btn_yes"
                android:textAllCaps="false"
                android:textColor="@color/button_color"
                style="@style/SubmitButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/btnNo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/dp_20"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:padding="@dimen/dp_20"
            android:src="@drawable/ic_rupee"
            android:background="@drawable/bn_bg_btn_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_close"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:tint="@color/white"
            android:contentDescription="@string/bn_image_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>